--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
+    <div class="wrapper">
+        <div class="libros">
+            <h1>Me falta leer</h1>
+            <form>
+                <label for="fname">Nombre del libro</label>
+                <input type="text" id="lname" name="libro" placeholder="Ingresa nombre del libro..">
+
+                <label for="lname">Nombre del autor</label>
+                <input type="text" id="aname" name="autor" placeholder="Ingresa apellido del autor..">
+
+                <input id="submit" type="submit" value="Submit">
+            </form>
+        </div>
+        <div class="library">
+            <h1>Mi biblioteca</h1>
+        </div>
+    </div>
     <script src="js.js"></script>
 </body>
+
 </html>
