--- a/index.html
+++ b/index.html
@@ -12,19 +12,32 @@
 <body>
     <div class="wrapper">
         <div class="libros">
-            <h1>Me falta leer</h1>
-            <form>
-                <label for="fname">Nombre del libro</label>
-                <input type="text" id="lname" name="libro" placeholder="Ingresa nombre del libro..">
+            <div class="libros-in">
+                <h1>Me falta leer</h1>
+                <form>
+                    <label for="fname"></label>
+                    <input type="text" id="lname" name="libro" placeholder="Ingresa nombre del libro..">
 
-                <label for="lname">Nombre del autor</label>
-                <input type="text" id="aname" name="autor" placeholder="Ingresa apellido del autor..">
+                    <label for="lname"></label>
+                    <input type="text" id="aname" name="autor" placeholder="Ingresa apellido del autor..">
 
-                <input id="submit" type="submit" value="Submit">
-            </form>
+                    <input id="submit" type="submit" value="Submit">
+                </form>
+            </div>
+
+            <div class="proxlect">
+                <h1>Próximas Lecturas</h1>
+            <!-- Doble hover: x eliminar, Marcar como leyendo, marcar como leìdo (pasa a "mis leìdos")on hover -->
+                <p></p>
+            </div>
         </div>
+
         <div class="library">
-            <h1>Mi biblioteca</h1>
+            <h1>Mis leídos 2022</h1>
+                <!-- Doble hover: tacho eliminar de lista (pasa a "mis leìdos), pasar a pròximas lecturas.
+                sacar screenshot/compartir? -->
+
+            <h4></h4>
         </div>
     </div>
     <script src="js.js"></script>
