--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
                     <label for="lname"></label>
                     <input type="text" id="aname" name="autor" placeholder="Ingresa apellido del autor..">
 
-                    <input onclick="addBook()" id="submit" type="submit" value="Submit">
+                    <input id="submit" type="submit" value="Submit">
                 </div>
             </div>
 
-            <div class="proxlect">
-                <h1>Próximas Lecturas</h1>
-                <!-- Doble hover: x eliminar, Marcar como leyendo, marcar como leìdo (pasa a "mis leìdos")on hover -->
+            <div id="proxlect">
+                
+                <h1>Proximos titulos</h1>
                 <div id="proxlect2">
-                    <p id="proximos"></p>
-                    <button id="leido" onclick="adr()"></button>
-                    <button id="eliminar"onclick="removeBook()""></button>
+
                 </div>
             </div>
         </div>
